--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,52 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer base {
+  h1 {
+    @apply text-4xl font-bold;
+  }
+
+  h2 {
+    @apply text-2xl font-bold mb-4;
+  }
+
+  h3 {
+    @apply text-lg font-medium mb-2;
+  }
+
+  p {
+    @apply text-neutral-400;
+  }
+
+  table {
+    @apply w-full;
+  }
+
+  table tr th {
+    @apply text-left pr-6;
+  }
+
+  table tr th,
+  table tr td {
+    @apply py-1;
+  }
+}
+
+@layer components {
+  .button {
+    @apply inline-block text-center bg-violet-800 px-4 py-2 rounded;
+  }
+
+  .button--full {
+    @apply block w-full;
+  }
+
+  .stretched-link {
+    @apply after:absolute after:w-full after:h-full after:inset-0;
+  }
+
+  .form-control {
+    @apply mb-4 border text-sm rounded-lg block w-full py-2 px-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-violet-800 focus:border-violet-800;
+  }
+}
