--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,22 @@ body {
 }
 
 @layer base {
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-violet-700 rounded;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-violet-800;
+  }
+
   h1 {
     @apply text-4xl font-bold;
   }
